--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -7,6 +7,7 @@ body {
 	font-weight: 400;
 }
 
+
 h1,
 h2,
 h3,
@@ -33,6 +34,10 @@ a:link {
 .container-fluid {
 	position: relative;
 	padding: 0 $font-size-base;
+}
+
+.hidden {
+	overflow-y: hidden;
 }
 
 .container-xxl,
@@ -81,6 +86,7 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
+// menu
 .navbar {
 	&-pc {
 		display: none;
@@ -126,6 +132,7 @@ button[aria-expanded="true"].btn-category img {
 	align-items: center;
 	font-size: 1.4rem;
 }
+
 
 .btn-close {
 	font-size: 2rem;
@@ -619,6 +626,62 @@ button[aria-expanded="true"].btn-category img {
 
 // Mobile Start
 @include media-breakpoint-down(lg) {
+
+	// search
+	.search {
+		button#toggle {
+			position: absolute;
+			right: 15%;
+			top: 0.7rem;
+			z-index: 1;
+		}
+
+		&-text {
+			position: relative;
+		}
+
+		button.btn {
+			font-size: 1.2rem;
+			position: absolute;
+			right: 0;
+			top: 0.7rem;
+			z-index: 1;
+			color: $gray-600;
+
+		}
+
+		label {
+			width: 2rem;
+			height: 2rem;
+			position: absolute;
+			left: 0;
+			top: 0.6rem;
+			z-index: 1;
+		}
+
+		input.form-control {
+			position: relative;
+			border: none;
+			border-bottom: 1px solid $gray-500;
+			color: $gray-600;
+			font-size: 1.2rem;
+			border-radius: 0;
+			padding: 1rem 3rem;
+		}
+
+		&-list {
+			li {
+				line-height: 2.5;
+			}
+		}
+
+		&-banner {
+			min-height: 7rem;
+			border-radius: 5px;
+			background-color: $gray-400;
+		}
+	}
+
 	.navbar {
 		&-mobile {
 			display: block;
@@ -703,7 +766,7 @@ button[aria-expanded="true"].btn-category img {
 		padding: 0 1.6rem;
 
 		&-menu {
-			margin-top: 3rem;
+			margin-top: 2rem;
 		}
 
 		&.active {
